# nezha

./: .gitignore  AGENTS.md  CHECKLIST.md  DELIVERY.md  ECOSYSTEM_OVERVIEW.md  PROJECT_SUMMARY.md  README.md  agent.md  package-lock.json  test-poll.js  test-sandbox.ts
.claude/: project-context.md
_bmad/: ACCEPTANCE_REPORT.md  README.md  README_epics.md  README_stories.md
deploy/: Agent回复与谛听拦截验证.md  NAS-Synapse-配置说明.md  README.md  diting-config-chain.yaml  docker-compose.integration.yml  env.example  nas-sudo-nopasswd-and-push.sh  policy_rules_test.yaml  synapse-entrypoint.sh  下一步.md  原生渠道验证步骤.md
diting/: ACCEPTANCE_CHECKLIST.md  CONFIG_LAYERS.md  DEV_WATCH.md  DOCS_INDEX.md  MAIN_ENTRIES.md  Makefile  README.md  config.chain-on.yaml  config.chain-run.yaml  config.example.yaml  config.yaml  main.go  policy_rules.example.yaml  query_audit.sh  run_acceptance.sh  trigger_review.sh
docs/: README.md  decentralized-agent-ecosystem.md  (+2 more)
wukong/: .gitignore  README_CN.md  ROADMAP.md  pyproject.toml  test-hybrid.ts
wukong/_bmad-output/implementation-artifacts/: 1-2-identity-cache-reuse.md  sprint-status-summary.md  sprint-status.yaml
wukong/_bmad/_config/: files-manifest.csv
wukong/docs/: DEVELOPMENT.md
wukong/examples/: agent-config.json
wukong/src/: cli.ts
wukong/src/agents/: __init__.py
wukong/src/agents/wukong/: __init__.py  agent.py  client.py  config.py
wukong/src/agents/wukong/skills/: __init__.py
wukong/src/clients/: TianshuClient.ts
wukong/src/managers/: TaskSuspendManager.ts
wukong/tests/unit/: AgentManager.test.ts  TaskSuspendManager.test.ts
(+316 files in other folders)
